fix fail resoponsive on mobile

--- a/style.css
+++ b/style.css
@@ -192,6 +192,10 @@ ul li{
         margin-top: 100px;
     }
 
+    .hero-text{
+        width: 100%;
+    }
+
     .hero-image {
         display: flex;
         justify-content: center;
